test/src/e2e_vm_tests/test_programs/should_fail/imports_implicitly_public/external_mod/src/external_submod.sw
library;

pub enum ExtSubmodEnum {
    A: (),
    B: (),
}

pub fn external_submod_foo() -> u32 {
    let _ = external_submod_private();
    2
}

fn external_submod_private() -> ExtSubmodEnum {
    ExtSubmodEnum::A
}
